--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,31 +1,42 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
-    defaultConfig {
-        applicationId "com.example.big.zxingandroid"
-        minSdkVersion 22
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+  compileSdkVersion 25
+  buildToolsVersion "25.0.2"
+  defaultConfig {
+    applicationId "com.example.big.zxingandroid"
+    minSdkVersion 22
+    targetSdkVersion 25
+    versionCode 1
+    versionName "1.0"
+    resConfigs("en", "th")
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+  }
+}
+
+repositories {
+  jcenter()
+  flatDir {
+    dirs 'libs'
+  }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.journeyapps:zxing-android-embedded:3.4.0'
-    compile 'com.google.zxing:core:3.2.1'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+  compile fileTree(include: ['*.jar'], dir: 'libs')
+  androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    exclude group: 'com.android.support', module: 'support-annotations'
+  })
+  compile 'com.android.support:appcompat-v7:25.2.0'
+  compile 'com.journeyapps:zxing-android-embedded:3.4.0'
+  compile 'com.google.zxing:core:3.2.1'
+  compile 'com.android.support.constraint:constraint-layout:1.0.2'
+  compile 'com.ogaclejapan.smarttablayout:library:1.6.1'
+  compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.1'
+  compile 'com.android.support:support-v4:25.2.0'
+  compile project(':swipeback-1.0.4')
 }
